# zephyr_playground

./: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
drivers/: CMakeLists.txt  Kconfig
drivers/testDevice/: CMakeLists.txt  Kconfig  testDevice.c  testDevice.h
dts/bindings/: hatronic,testDevice.yaml  vendor-prefixes.txt
src/: main.c
